--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="main-content">
       <div class="password">
-        <input class="show-password" type="text" />
+        <input class="show-password" type="text" size="4" />
         <form>
           <button class="button">
             <img class="button-image" src="./src/images/lock.svg" />
