--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <header>
-      <h1 class="main-title"><a href="https://github.com/kvrdv/unqwertier"> Unqwertier</a></h1>
-      <h4 class="main-title-text">
+      <p class="main-title"><a href="https://github.com/kvrdv/unqwertier"> Unqwertier</a></p>
+      <p class="main-title-text">
         Simple password generator by <a class="main-title-link" href="https://github.com/kvrdv">KVRDV</a>
-      </h4>
+      </p>
     </header>
 
     <div class="main-content">
