--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <footer class="footer">
       <h5 class="footer-text">
-        <a class="footer-link" href="https://github.com/kvrdv">KVRDV</a>
+        <a class="footer-link" href="https://kvrdv.github.io/kvrdv">KVRDV</a>
         2021
       </h5>
     </footer>
