--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <header>
-      <p class="main-title"><a href="https://github.com/kvrdv/unqwertier"> Unqwertier</a></p>
+      <p class="main-title"><a href="https://github.com/bencubin/unqwertier"> Unqwertier</a></p>
       <p class="main-title-text">
-        Simple password generator by <a class="main-title-link" href="https://github.com/kvrdv">KVRDV</a>
+        Simple password generator by <a class="main-title-link" href="https://github.com/bencubin">Bencubin</a>
       </p>
     </header>
 
@@ -61,7 +61,7 @@
 
     <footer class="footer">
       <h5 class="footer-text">
-        <a class="footer-link" href="https://kvrdv.github.io/kvrdv">KVRDV</a>
+        <a class="footer-link" href="https://github.com/bencubin">Bencubin</a>
         2021
       </h5>
     </footer>
