--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./src/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./src/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./src/favicon/favicon-16x16.png" />    
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/favicon/favicon-16x16.png" />
     <title>Unqwertier</title>
-    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
@@ -24,7 +23,7 @@
         <p class="hidden show-password-warning"></p>
         <form>
           <button class="button">
-            <img class="button-image" src="./src/images/lock.svg" />
+            <img class="button-image" src="/src/images/lock.svg" />
           </button>
         </form>
       </div>
@@ -68,6 +67,5 @@
         2021
       </h5>
     </footer>
-    <script src="./js/app.js"></script>
   </body>
 </html>
