--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,11 @@
         <input class="show-password" type="text" size="4" readonly />
         <p class="hidden show-password-warning"></p>
         <form>
-          <button class="button">
-            <img class="button-image" src="/src/images/lock.svg" />
+          <button class="button">            
+            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M23.4375 30H6.5625C5.01251 30 3.75 28.7389 3.75 27.1875V14.0625C3.75 12.5111 5.01251 11.25 6.5625 11.25H23.4375C24.9875 11.25 26.25 12.5111 26.25 14.0625V27.1875C26.25 28.7389 24.9875 30 23.4375 30ZM6.5625 13.125C6.04614 13.125 5.625 13.545 5.625 14.0625V27.1875C5.625 27.705 6.04614 28.125 6.5625 28.125H23.4375C23.9539 28.125 24.375 27.705 24.375 27.1875V14.0625C24.375 13.545 23.9539 13.125 23.4375 13.125H6.5625Z" fill="white"/>
+              <path d="M21.5625 13.125C21.045 13.125 20.625 12.705 20.625 12.1875V7.5C20.625 4.39865 18.1013 1.875 15 1.875C11.8987 1.875 9.375 4.39865 9.375 7.5V12.1875C9.375 12.705 8.955 13.125 8.4375 13.125C7.92 13.125 7.5 12.705 7.5 12.1875V7.5C7.5 3.36365 10.8636 0 15 0C19.1364 0 22.5 3.36365 22.5 7.5V12.1875C22.5 12.705 22.08 13.125 21.5625 13.125Z" fill="white"/>
+              </svg>
           </button>
         </form>
       </div>
