--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <header>
       <p class="main-title"><a href="https://github.com/kvrdv/unqwertier">Unqwertier</a></p>
       <p class="main-title-text">
-        Simple password generator by <a class="main-title-link" href="kvrdv.github.io/homepage">KVRDV</a>
+        Simple password generator by <a class="main-title-link" href="https://github.com/bencubin">Bencubin</a>
       </p>
     </header>
 
@@ -66,7 +66,7 @@
 
     <footer class="footer">
       <h5 class="footer-text">
-        <a class="footer-link" href="kvrdv.github.io/homepage">KVRDV</a>
+        <a class="footer-link" href="https://github.com/bencubin">Bencubin</a>
         2021
       </h5>
     </footer>
